--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ cloudinary = "*"
 flask-admin = "*"
 typing-extensions = "*"
 flask-jwt-extended = "*"
+sendgrid = "*"
 
 [requires]
 python_version = "3.10"
