--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ flask-admin = "*"
 typing-extensions = "*"
 flask-jwt-extended = "*"
 sendgrid = "*"
+flask-mail = "*"
+requests = "*"
 
 [requires]
 python_version = "3.10"
