--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
 		"react-dom": "^16.8.4",
 		"react-icons": "^5.0.1",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^6.22.3"
+		"react-router-dom": "^6.22.3",
+		"sendgrid": "^5.2.3"
 	}
 }
