--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"react-icons": "^5.0.1",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.22.3",
+		"react-tooltip": "^5.26.4",
 		"sendgrid": "^5.2.3"
 	}
 }
